<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_marginTop="40dp">

    <!--Page Title Text-->
    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="26sp"
        android:gravity="center"
        android:paddingBottom="20dp" />

    <!--Username Input Text-->
    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usernameHint"/>

    <!--Password Input Text-->
    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/phoneField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phoneHint"
        android:inputType="phone"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <!--Login Button-->
    <Button
        android:id="@+id/primaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="10dp"/>

    <!--Register Button-->
    <Button
        android:id="@+id/secondaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="10dp"/>
</LinearLayout>