<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginTop="40dp">

    <TextView
        android:id="@+id/permissionStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permissionsTitle"
        android:gravity="center"
        android:textSize="18sp"
        android:padding="8dp"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/requestPermissionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/requestSMS"/>

    <Button
        android:id="@+id/viewInventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkInventory"
        android:visibility="invisible"/>

</LinearLayout>